--- a/src/data/grammar/mtg/card-related/cardfinder/cardfinder-color-filters.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/cardfinder-color-filters.yaml
@@ -1,21 +1,21 @@
 ###### color filters ######
-_colorTerm: ""
-color_W: "[_colorTerm: color=w color!=ubrg]"
-color_U: "[_colorTerm: color=u color!=brgw]"
-color_B: "[_colorTerm: color=b color!=rgwu]"
-color_R: "[_colorTerm: color=r color!=gwub]"
-color_G: "[_colorTerm: color=g color!=wubr]"
+_colorFilter: ""
+color_W: "[_colorFilter: color=w color!=ubrg]"
+color_U: "[_colorFilter: color=u color!=brgw]"
+color_B: "[_colorFilter: color=b color!=rgwu]"
+color_R: "[_colorFilter: color=r color!=gwub]"
+color_G: "[_colorFilter: color=g color!=wubr]"
 
-color_WU: "[_colorTerm: color=wu color!=brg]"
-color_UB: "[_colorTerm: color=ub color!=rgw]"
-color_BR: "[_colorTerm: color=br color!=gwu]"
-color_RG: "[_colorTerm: color=rg color!=wub]"
-color_GW: "[_colorTerm: color=gw color!=ubr]"
-color_WB: "[_colorTerm: color=wb color!=urg]"
-color_UR: "[_colorTerm: color=ur color!=bgw]"
-color_BG: "[_colorTerm: color=bg color!=rwu]"
-color_RW: "[_colorTerm: color=rw color!=gub]"
-color_UG: "[_colorTerm: color=ug color!=wbr]"
+color_WU: "[_colorFilter: color=wu color!=brg]"
+color_UB: "[_colorFilter: color=ub color!=rgw]"
+color_BR: "[_colorFilter: color=br color!=gwu]"
+color_RG: "[_colorFilter: color=rg color!=wub]"
+color_GW: "[_colorFilter: color=gw color!=ubr]"
+color_WB: "[_colorFilter: color=wb color!=urg]"
+color_UR: "[_colorFilter: color=ur color!=bgw]"
+color_BG: "[_colorFilter: color=bg color!=rwu]"
+color_RW: "[_colorFilter: color=rw color!=gub]"
+color_UG: "[_colorFilter: color=ug color!=wbr]"
 color_UW: "#color_WU#"
 color_BU: "#color_UB#"
 color_RB: "#color_BR#"
@@ -27,27 +27,27 @@ color_GB: "#color_BG#"
 color_WR: "#color_RW#"
 color_GU: "#color_UG#"
 
-color_WUB: "[_colorTerm: color=wub color!=rg]"
-color_UBR: "[_colorTerm: color=ubr color!=gw]"
-color_BRG: "[_colorTerm: color=brg color!=wu]"
-color_RGW: "[_colorTerm: color=rgw color!=ub]"
-color_GWU: "[_colorTerm: color=gwu color!=br]"
-color_WBR: "[_colorTerm: color=wbr color!=ug]"
-color_URG: "[_colorTerm: color=urg color!=wb]"
-color_BGW: "[_colorTerm: color=bgw color!=ur]"
-color_RWU: "[_colorTerm: color=rwu color!=bg]"
-color_GUB: "[_colorTerm: color=gub color!=rw]"
+color_WUB: "[_colorFilter: color=wub color!=rg]"
+color_UBR: "[_colorFilter: color=ubr color!=gw]"
+color_BRG: "[_colorFilter: color=brg color!=wu]"
+color_RGW: "[_colorFilter: color=rgw color!=ub]"
+color_GWU: "[_colorFilter: color=gwu color!=br]"
+color_WBR: "[_colorFilter: color=wbr color!=ug]"
+color_URG: "[_colorFilter: color=urg color!=wb]"
+color_BGW: "[_colorFilter: color=bgw color!=ur]"
+color_RWU: "[_colorFilter: color=rwu color!=bg]"
+color_GUB: "[_colorFilter: color=gub color!=rw]"
 color_RUG: "#color_URG#"
 color_BUG: "#color_GUB#"
 
-color_WUBRG: "[_colorTerm: color=wubrg]"
+color_WUBRG: "[_colorFilter: color=wubrg]"
 
-color_Colorless: "[_colorTerm: color!=wubrg]"
+color_Colorless: "[_colorFilter: color!=wubrg]"
 
 color_4color:
-- "[_colorTerm: color=wubr color!=g]"
-- "[_colorTerm: color=ubrg color!=w]"
-- "[_colorTerm: color=brgw color!=u]"
-- "[_colorTerm: color=rgwu color!=b]"
-- "[_colorTerm: color=gwub color!=r]"
+- "[_colorFilter: color=wubr color!=g]"
+- "[_colorFilter: color=ubrg color!=w]"
+- "[_colorFilter: color=brgw color!=u]"
+- "[_colorFilter: color=rgwu color!=b]"
+- "[_colorFilter: color=gwub color!=r]"
 
