searchable one- and two-color manabases

--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -142,3 +142,13 @@ cardQueryCreatureWithText:
 randomCreatureWithText:
 - >
   [_card:#cardQueryCreatureWithText#]#_cardName#
+
+# expects _searchString to be defined
+cardQueryLandWithColorFilter:
+- >
+  [_customQuery:t=land#_landColorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
+
+# expects _searchString, see above
+randomLandCardByColor:
+- >
+  [_card:#cardQueryLandWithColorFilter#]#_cardName#
