--- a/src/data/grammar/mtg/card-related/cardfinder/cardfinder-color-filters.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/cardfinder-color-filters.yaml
@@ -27,30 +27,34 @@ color_GB: '#color_BG#'
 color_WR: '#color_RW#'
 color_GU: '#color_UG#'
 
-color_WUB: '[_colorFilter: color=wub color!=rg]'
-color_UBR: '[_colorFilter: color=ubr color!=gw]'
-color_BRG: '[_colorFilter: color=brg color!=wu]'
-color_RGW: '[_colorFilter: color=rgw color!=ub]'
-color_GWU: '[_colorFilter: color=gwu color!=br]'
-color_WBR: '[_colorFilter: color=wbr color!=ug]'
-color_URG: '[_colorFilter: color=urg color!=wb]'
-color_BGW: '[_colorFilter: color=bgw color!=ur]'
-color_RWU: '[_colorFilter: color=rwu color!=bg]'
-color_GUB: '[_colorFilter: color=gub color!=rw]'
+color_WUB: '[_colorFilter: color=wub color!=rg][_landColorFilter:#landFilter_WU#,#landFilter_UB#,#landFilter_WB#,#landFilter_WUB#]'
+color_UBR: '[_colorFilter: color=ubr color!=gw][_landColorFilter:#landFilter_UB#,#landFilter_BR#,#landFilter_UR#,#landFilter_UBR#]'
+color_BRG: '[_colorFilter: color=brg color!=wu][_landColorFilter:#landFilter_BR#,#landFilter_RG#,#landFilter_BG#,#landFilter_BRG#]'
+color_RGW: '[_colorFilter: color=rgw color!=ub][_landColorFilter:#landFilter_RG#,#landFilter_GW#,#landFilter_RW#,#landFilter_RGW#]'
+color_GWU: '[_colorFilter: color=gwu color!=br][_landColorFilter:#landFilter_GW#,#landFilter_WU#,#landFilter_UG#,#landFilter_GWU#]'
+color_WBR: '[_colorFilter: color=wbr color!=ug][_landColorFilter:#landFilter_WB#,#landFilter_BR#,#landFilter_WR#,#landFilter_WBR#]'
+color_URG: '[_colorFilter: color=urg color!=wb][_landColorFilter:#landFilter_UR#,#landFilter_RG#,#landFilter_UG#,#landFilter_URG#]'
+color_BGW: '[_colorFilter: color=bgw color!=ur][_landColorFilter:#landFilter_BG#,#landFilter_GW#,#landFilter_BW#,#landFilter_BGW#]'
+color_RWU: '[_colorFilter: color=rwu color!=bg][_landColorFilter:#landFilter_RW#,#landFilter_WU#,#landFilter_RU#,#landFilter_RWU#]'
+color_GUB: '[_colorFilter: color=gub color!=rw][_landColorFilter:#landFilter_GU#,#landFilter_UB#,#landFilter_GB#,#landFilter_GUB#]'
 color_RUG: '#color_URG#'
 color_BUG: '#color_GUB#'
 
-color_WUBRG: '[_colorFilter: color=wubrg]'
+color_WUBRG: '[_colorFilter: color=wubrg][_landColorFilter:#landFilter_WUB#,#landFilter_UBR#,#landFilter_BRG#,#landFilter_RGW#,#landFilter_GWU#,#landFilter_WBR#,#landFilter_URG#,#landFilter_BGW#,#landFilter_RWU#,#landFilter_GUB#]'
 
 # include wastes
 color_Colorless: '[_colorFilter: color!=wubrg][_landColorFilter: name=wastes,#landFilter_Colorless#]'
 
 color_fourColor:
-- '[_colorFilter: color=wubr color!=g]'
-- '[_colorFilter: color=ubrg color!=w]'
-- '[_colorFilter: color=brgw color!=u]'
-- '[_colorFilter: color=rgwu color!=b]'
-- '[_colorFilter: color=gwub color!=r]'
+- '[_colorFilter: color=wubr color!=g][_landColorFilter:#landFilter_WUB#,#landFilter_UBR#,#landFilter_WBR#,#landFilter_RWU#]'
+
+- '[_colorFilter: color=ubrg color!=w][_landColorFilter:#landFilter_UBR#,#landFilter_BRG#,#landFilter_URG#,#landFilter_GUB#]'
+
+- '[_colorFilter: color=brgw color!=u][_landColorFilter:#landFilter_BRG#,#landFilter_RGW#,#landFilter_WBR#,#landFilter_BGW#]'
+
+- '[_colorFilter: color=rgwu color!=b][_landColorFilter:#landFilter_RGW#,#landFilter_GWU#,#landFilter_URG#,#landFilter_RWU#]'
+
+- '[_colorFilter: color=gwub color!=r][_landColorFilter:#landFilter_WUB#,#landFilter_GWU#,#landFilter_BGW#,#landFilter_GUB#]'
 
 landFilter_W:
 - ' t=plains t=basic'
@@ -75,6 +79,8 @@ landFilter_G:
 landFilter_WU:
 - ' text="{W}" text="{U}" text!="{B}" text!="{R}" text!="{G}"'
 - ' text="{W}" text="{U}" text!="{B}" text!="{R}" text!="{G}"'
+- ' t=plains t=basic'
+- ' t=island t=basic'
 - ' t=plains t=island'
 - ' text="search" text="plains" text="island" text!="swamp" text!="mountain" text!="forest"'
 - ' text="{W/U}"'
@@ -82,6 +88,8 @@ landFilter_WU:
 landFilter_UB:
 - ' text="{U}" text="{B}" text!="{W}" text!="{R}" text!="{G}"'
 - ' text="{U}" text="{B}" text!="{W}" text!="{R}" text!="{G}"'
+- ' t=island t=basic'
+- ' t=swamp t=basic'
 - ' t=island t=swamp'
 - ' text="search" text="island" text="swamp" text!="plains" text!="mountain" text!="forest"'
 - ' text="{U/B}"'
@@ -89,6 +97,8 @@ landFilter_UB:
 landFilter_BR:
 - ' text="{B}" text="{R}" text!="{W}" text!="{U}" text!="{G}"'
 - ' text="{B}" text="{R}" text!="{W}" text!="{U}" text!="{G}"'
+- ' t=swamp t=basic'
+- ' t=mountain t=basic'
 - ' t=swamp t=mountain'
 - ' text="search" text="swamp" text="mountain" text!="plains" text!="island" text!="forest"'
 - ' text="{B/R}"'
@@ -96,6 +106,8 @@ landFilter_BR:
 landFilter_RG:
 - ' text="{R}" text="{G}" text!="{W}" text!="{U}" text!="{B}"'
 - ' text="{R}" text="{G}" text!="{W}" text!="{U}" text!="{B}"'
+- ' t=mountain t=basic'
+- ' t=forest t=basic'
 - ' t=mountain t=forest'
 - ' text="search" text="mountain" text="forest" text!="plains" text!="island" text!="swamp"'
 - ' text="{R/G}"'
@@ -103,6 +115,8 @@ landFilter_RG:
 landFilter_GW:
 - ' text="{G}" text="{W}" text!="{B}" text!="{R}" text!="{U}"'
 - ' text="{G}" text="{W}" text!="{B}" text!="{R}" text!="{U}"'
+- ' t=forest t=basic'
+- ' t=plains t=basic'
 - ' t=forest t=plains'
 - ' text="search" text="forest" text="plains" text!="swamp" text!="mountain" text!="island"'
 - ' text="{G/W}"'
@@ -110,6 +124,8 @@ landFilter_GW:
 landFilter_RW:
 - ' text="{R}" text="{W}" text!="{B}" text!="{U}" text!="{G}"'
 - ' text="{R}" text="{W}" text!="{B}" text!="{U}" text!="{G}"'
+- ' t=mountain t=basic'
+- ' t=white t=basic'
 - ' t=mountain t=plains'
 - ' text="search" text="mountain" text="plains" text!="swamp" text!="island" text!="forest"'
 - ' text="{R/W}"'
@@ -117,6 +133,8 @@ landFilter_RW:
 landFilter_BG:
 - ' text="{B}" text="{G}" text!="{W}" text!="{R}" text!="{U}"'
 - ' text="{B}" text="{G}" text!="{W}" text!="{R}" text!="{U}"'
+- ' t=swamp t=basic'
+- ' t=forest t=basic'
 - ' t=swamp t=forest'
 - ' text="search" text="swamp" text="forest" text!="plains" text!="mountain" text!="island"'
 - ' text="{B/G}"'
@@ -124,6 +142,8 @@ landFilter_BG:
 landFilter_UR:
 - ' text="{U}" text="{R}" text!="{W}" text!="{B}" text!="{G}"'
 - ' text="{U}" text="{R}" text!="{W}" text!="{B}" text!="{G}"'
+- ' t=island t=basic'
+- ' t=mountain t=basic'
 - ' t=island t=mountain'
 - ' text="search" text="island" text="mountain" text!="plains" text!="swamp" text!="forest"'
 - ' text="{U/R}"'
@@ -131,6 +151,8 @@ landFilter_UR:
 landFilter_WB:
 - ' text="{W}" text="{B}" text!="{R}" text!="{U}" text!="{G}"'
 - ' text="{W}" text="{B}" text!="{R}" text!="{U}" text!="{G}"'
+- ' t=plains t=basic'
+- ' t=swamp t=basic'
 - ' t=plains t=swamp'
 - ' text="search" text="plains" text="swamp" text!="mountain" text!="island" text!="forest"'
 - ' text="{W/B}"'
@@ -138,15 +160,51 @@ landFilter_WB:
 landFilter_GU:
 - ' text="{G}" text="{U}" text!="{B}" text!="{R}" text!="{W}"'
 - ' text="{G}" text="{U}" text!="{B}" text!="{R}" text!="{W}"'
+- ' t=foest t=basic'
+- ' t=island t=basic'
 - ' t=forest t=island'
 - ' text="search" text="forest" text="island" text!="swamp" text!="mountain" text!="plains"'
 - ' text="{G/U}"'
 
-### TODO 3-color land filters, WUBRG land filters (don't bother with 4-color)
+landFilter_WUB: 
+- ' text="{W}" text="{U}" text="{B}" text!="{R}" text!="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_UBR:
+- ' text!="{W}" text="{U}" text="{B}" text="{R}" text!="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_BRG:
+- ' text!="{W}" text!="{U}" text="{B}" text="{R}" text="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_RGW:
+- ' text="{W}" text!="{U}" text!="{B}" text!="{R}" text="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_GWU:
+- ' text="{W}" text="{U}" text!="{B}" text!="{R}" text!="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_WBR:
+- ' text="{W}" text="{U}" text="{B}" text="{R}" text="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_URG:
+- ' text="{W}" text="{U}" text="{B}" text="{R}" text="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_BGW:
+- ' text="{W}" text="{U}" text="{B}" text="{R}" text="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_RWU:
+- ' text="{W}" text="{U}" text="{B}" text="{R}" text="{G}"'
+- '#landfilter_ManyColorLand#'
+landFilter_GUB:
+- ' text="{W}" text="{U}" text="{B}" text="{R}" text="{G}"'
+- '#landfilter_ManyColorLand#'
+
+landFilter_RUG: '#landFilter_URG#'
+landFilter_BUG: '#landFilter_GUB#'
 
 landFilter_Colorless:
 - ' text="{C}" text!="{W}" text!="{U}" text!="{B}" text!="{R}" text!="{G}" text!="any color" text!="that color" text!="one color" text!="colors" text!="plains" text!="island" text!="swamp" text!="mountain" text!="forest"'
 
-#three colors or more : include city of brass type lands (and evolving wild type lands)
+landfilter_ManyColorLand:
+- 'text="any color" text!="one color" text|="colors"  text|="{W}{U}{B}{R}{G}"'
+- 'text="search" text="basic land" text!="{W}" text!="{U}" text!="{B}" text!="{R}" text!="{G}"'
 
 #tribal - cavern of souls and new ixalan land?
