--- a/src/data/grammar/mtg/card-related/searchable-color-combos.yaml
+++ b/src/data/grammar/mtg/card-related/searchable-color-combos.yaml
@@ -3,7 +3,7 @@ searchableColor:
 - "#searchableMonoColor#"
 - "#searchableMulticolorWithLetters#"
 - "#searchableMulticolorWithWords#"
-# - "#searchableColorComboNickname#"
+- "#searchableColorComboNickname#"
 
 searchableBasicColor:
 - "white#color_W#"
