--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -152,3 +152,8 @@ cardQueryLandWithColorFilter:
 randomLandCardByColor:
 - >
   [_card:#cardQueryLandWithColorFilter#]#_cardName#
+
+# expects _searchString, see above
+randomLandCardByColor2:
+- >
+  [_card:#cardQueryLandWithColorFilter#]#_cardName#, [_card:#cardQueryLandWithColorFilter#]#_cardName#, [_card:#cardQueryLandWithColorFilter#]#_cardName#
