--- a/src/data/grammar/mtg/cards/mtg-cards.yaml
+++ b/src/data/grammar/mtg/cards/mtg-cards.yaml
@@ -70,7 +70,7 @@
     "#dualLands#",
     "#utilityLands#",
     "#limitedLands#",
-    "randomNonbasicLandCard"
+    "#randomNonbasicLandCard#"
   ],
 
   descriptiveCard: [
